Fixing text alignment issue

--- a/app/stylesheets/framed.scss
+++ b/app/stylesheets/framed.scss
@@ -120,6 +120,7 @@ form{
     }
     &.field{
       white-space: nowrap;
+      text-align: left;
       input[type=text]{ width: 140px; margin-right: 20px; }
     }
     &.options{
